# NNN

./: .gitignore  CMakeLists.txt  README.md
include/: activation_function.hpp  layer.hpp  loss_function.hpp  matrix.hpp  neural_network.hpp
src/: activation_function.cpp  layer.cpp  loss_function.cpp  matrix.cpp  neural_network.cpp
tests/: test_activation_function.cpp  test_layer.cpp  test_loss_function.cpp  test_matrix.cpp  test_neural_network.cpp
